--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "express": "^4.17.1",
     "joi": "^13.0.1"
   },
-  "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-google": "^0.14.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
